--- a/src/pages/AboutPage.css
+++ b/src/pages/AboutPage.css
@@ -36,3 +36,28 @@
   background-color: rgba(0, 0, 0, 0.637);
   border-radius: 3px;
 }
+
+.linkIconContainer {
+  /* border: 1px solid black; */
+  box-shadow: 2px 2px 4px rgb(121, 121, 121);
+  width: 100%;
+  padding-top: 100%;
+  margin-bottom: 30px;
+  position: relative;
+}
+
+.linkIconContainer:hover {
+  box-shadow: 0 0 2px black;
+}
+
+.linkIcon {
+  position: absolute;
+  margin: auto;
+  padding: 10%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  /* height: 50px; */
+}
